--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <h1>Il mio Viaggio a Londra</h1>
+    <header>
+      <img src="./img/" alt="logo" />
+    </header>
+    <main>
+      <section>
+        <h1>
+          Internet deve essere al servizio del "bene pubblico": il manifesto di
+          Tim Berners-Lee
+        </h1>
+      </section>
+    </main>
   </body>
 </html>
