--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <!-- pattern -->
     <header>
-      <img src="./img/" alt="logo" />
+      <div class="conteiner1"><img src="./img/logo.svg" alt="logo" /></div>
     </header>
     <main>
       <section>
-        <h1>
-          Internet deve essere al servizio del "bene pubblico": il manifesto di
-          Tim Berners-Lee
-        </h1>
+        <div class="titolo1">
+          <h1>
+            Internet deve essere al servizio del "bene pubblico": il manifesto
+            di Tim Berners-Lee
+          </h1>
+        </div>
       </section>
     </main>
   </body>
