--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section>
-        <div class="titolo1">
+        <div>
           <h1>
             Internet deve essere al servizio del "bene pubblico": il manifesto
             di Tim Berners-Lee
