--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="conteiner1"><img src="./img/logo.svg" alt="logo" /></div>
     </header>
     <main>
-      <section>
+      <section class="conteiner2">
         <div>
           <h1>
             Internet deve essere al servizio del "bene pubblico": il manifesto
