--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <!-- pattern -->
     <header>
-      <div class="conteiner1"><img src="./img/logo.svg" alt="logo" /></div>
+      <div class="conteiner1">
+        <div class="logocontainer">
+          <img class="logo" src="img/logo.svg" alt="logo" />
+        </div>
+      </div>
     </header>
     <main>
       <section class="conteiner2">
