--- a/index.html
+++ b/index.html
@@ -17,14 +17,24 @@
       </div>
     </header>
     <main>
+      <!-- sezione1 -->
       <section class="conteiner2">
         <div>
           <h1>
             Internet deve essere al servizio del "bene pubblico": il manifesto
             di Tim Berners-Lee
           </h1>
+          <div class="spazio1">
+            <span class="colore1">Scritto da</span>
+            <span class="colore2">The Boolean</span>
+            <p class="colore3">il 10/10/2021</p>
+          </div>
         </div>
       </section>
+      <div>
+        <img src="./img/tim-1.jpg" alt="Tim1" />
+        <img src="./img/tim-2.jpg" alt="Tim2" />
+      </div>
     </main>
   </body>
 </html>
