--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
         </div>
       </section>
-      <div>
+      <div class="immagini">
         <img src="./img/tim-1.jpg" alt="Tim1" />
         <img src="./img/tim-2.jpg" alt="Tim2" />
       </div>
