--- a/index.html
+++ b/index.html
@@ -28,13 +28,26 @@
             <span class="colore1">Scritto da</span>
             <span class="colore2">The Boolean</span>
             <p class="colore3">il 10/10/2021</p>
+            <div class="immagini">
+              <img src="./img/tim-1.jpg" alt="Tim1" />
+              <img src="./img/tim-2.jpg" alt="Tim2" />
+            </div>
+            <span>1 photo: jonh s. and james</span>
           </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
+            quibusdam adipisci
+            <span class="yellow"
+              >excepturi nisi molestias explicabo excepturi nisi molestias
+              explicabo excepturi
+            </span>
+            nisi molestias explicabo excepturi nisi molestias explicabo
+            excepturi nisi molestias explicabo laudantium corrupti veritatis
+            architecto cum. Fugit dignissimos praesentium, temporibus at debitis
+            saepe nisi. Neque, recusandae.
+          </p>
         </div>
       </section>
-      <div class="immagini">
-        <img src="./img/tim-1.jpg" alt="Tim1" />
-        <img src="./img/tim-2.jpg" alt="Tim2" />
-      </div>
     </main>
   </body>
 </html>
