--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             </div>
             <span>1 photo: jonh s. and james</span>
           </div>
+
+          <!-- testo -->
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
             quibusdam adipisci
@@ -47,6 +49,22 @@
             saepe nisi. Neque, recusandae.
           </p>
         </div>
+
+        <!-- lista -->
+        <ul>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
+            voluptatibus. Facilis magnam, eveniet deserunt qui suscipit nesciunt
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
+            voluptatibus. Facilis magnam, eveniet deserunt qui suscipit nesciunt
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
+            voluptatibus. Facilis magnam, eveniet deserunt qui suscipit nesciunt
+          </li>
+        </ul>
       </section>
     </main>
   </body>
