--- a/index.html
+++ b/index.html
@@ -65,6 +65,29 @@
             voluptatibus. Facilis magnam, eveniet deserunt qui suscipit nesciunt
           </li>
         </ul>
+
+        <!-- tabella -->
+        <div class="tabella">
+          <table>
+            <tr>
+              <td>lorem ipsum dolor</td>
+              <td>lorem ipsum dolor</td>
+              <td>lorem ipsum dolor</td>
+            </tr>
+
+            <tr>
+              <td>lorem ipsum dolor</td>
+              <td>lorem ipsum dolor</td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Blanditiis quis magni ratione, consectetur aspernatur, quod
+                itaque pariatur tenetur voluptatem accusantium, reprehenderit
+                qui culpa cum eligendi praesentium quisquam corrupti. Veniam,
+                exercitationem.
+              </td>
+            </tr>
+          </table>
+        </div>
       </section>
     </main>
   </body>
