--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
             </tr>
           </table>
         </div>
+        <!-- testo -->
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+          ipsa inventore voluptatum quibusdam deserunt facilis laborum cum
+          minima eius nesciunt, animi fugit culpa at. Neque cumque soluta
+          placeat iusto facilis.
+        </p>
+        <!-- parte finale -->
+        <div>
+          <span class="grey">Potrebbero interessarti</span>
+        </div>
+        <img src="./img/monitor.jpg" alt="monitor" />
+        <img src="./img/graph.jpg" alt="grafica" />
       </section>
     </main>
   </body>
